tests/ui/numeric/fmt.stderr
error[E0080]: evaluation panicked: buffer is not big enough
  --> $SRC_DIR/core/src/fmt/num.rs:LL:COL
  ::: $SRC_DIR/core/src/fmt/num.rs:LL:COL
   |
   = note: evaluation of `core::fmt::num::imp::<impl u32>::format_into::<u8>::{constant#0}` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `impl_Display` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
  --> $SRC_DIR/core/src/fmt/num.rs:LL:COL
   |
   = note: this note originates in the macro `impl_Display` (in Nightly builds, run with -Z macro-backtrace for more info)

note: the above error was encountered while instantiating `fn core::fmt::num::imp::<impl u32>::format_into::<u8>`
  --> $DIR/fmt.rs:14:5
   |
LL |     x.format_into(&mut buf);
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
